possibly fix the site on mobile

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   font-family: sans-serif;
 }
 .text-container {
-  max-width:70%;
+  width:70%;
   margin-left:auto;
   margin-right:auto;
 }
@@ -72,8 +72,8 @@ body {
 }
 
 .table-container {
+  width: 70%;
   margin-left: auto;
-  width: 55%;
   margin-right: auto;
 }
 table {
